# lidar-hal-service

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: build-deb-arm64.yml  ci.yml
packaging/DEBIAN/: control.in  postinst  postrm
packaging/systemd/: lidar-service.service
src/: main.py
src/core/: manager.py  models.py
src/hardware/: base.py  pyrplidar_impl.py
src/transports/: rest_api.py
src/utils/: config_loader.py
